@@ -1,3 +1,7 @@
+  10 Dec 2020;  <chymera@gentoo.org> repositorg-0.1.ebuild,
+  repositorg-9999.ebuild:
+  app-misc/repositorg: updated dependency list
+
   14 Aug 2020;  <chymera@gentoo.org> files/repositorg_uuid.initd,
   repositorg-0.1.ebuild:
   app-misc/repositorg: improved init script
